# anode-audio

./: .gitignore  CUsersthenoProjectsguitaremulatorappbuild_output.txt  CUsersthenoProjectsguitaremulatorapptest_output.txt  build.gradle.kts  build_helper.bat  gradle.properties  run_build.bat  run_build.ps1  run_tests.ps1  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  jni_bridge.cpp  signal_chain.cpp  signal_chain.h
app/src/main/cpp/drums/: drum_bus.h  drum_engine.h  drum_track.h  drum_types.h  drum_voice.h  sequencer_clock.h
app/src/main/cpp/drums/voices/: fm_voice.h  metallic_voice.h  multilayer_voice.h  noise_voice.h  physical_voice.h  subtractive_voice.h
app/src/main/cpp/dsp/: fft_convolver.cpp  fft_convolver.h  spectrum_analyzer.h
app/src/main/cpp/effects/: amp_model.h  big_muff.h  boost.h  boss_bd2.h  boss_ds1.h  boss_ds2.h  boss_hm2.h  cabinet_sim.h  chorus.h  compressor.h  delay.h  dl4_delay.h  effect.h  fast_math.h  flanger.h  fuzz_face.h  fuzzrite.h  mf102_ring_mod.h  noise_gate.h  octavia.h  overdrive.h  oversampler.h  parametric_eq.h  passthrough.h  phaser.h  proco_rat.h  rangemaster.h  reverb.h  rotary_speaker.h  space_echo.h  tremolo.h  tube_screamer.h  tuner.h  univibe.h  vibrato.h  vintage_tremolo.h  wah.h
app/src/main/cpp/faust/: faust_dsp.h  faust_effect.h
app/src/main/cpp/faust/dsp/: tremolo.dsp
app/src/main/cpp/looper/: looper_engine.h  spsc_ring_buffer.h  wav_writer.h
app/src/main/cpp/utils/: atomic_params.h  spsc_queue.h
app/src/main/java/com/guitaremulator/app/: GuitarEmulatorApp.kt  MainActivity.kt
app/src/main/java/com/guitaremulator/app/audio/: AudioEngine.kt  AudioFocusManager.kt  AudioProcessingService.kt  DrumEngine.kt  IAudioEngine.kt  InputSourceManager.kt  WavDecoder.kt
app/src/main/java/com/guitaremulator/app/data/: DrumKit.kt  DrumPattern.kt  DrumRepository.kt  FactoryPresets.kt  LooperSession.kt  LooperSessionManager.kt  MidiMapping.kt  MidiMappingManager.kt  Preset.kt  PresetManager.kt  Setlist.kt  SetlistManager.kt  UserPreferencesRepository.kt
app/src/main/java/com/guitaremulator/app/ui/components/: ABComparisonBar.kt  EngineErrorBanner.kt  EqFaderStrip.kt  HardwareSlider.kt  LedIndicator.kt  LevelMeter.kt  LooperOverlay.kt  LooperTransport.kt  LooperTrimEditor.kt  LooperWaveform.kt  MasterControlsPanel.kt  MeteringStrip.kt  PedalCard.kt  PresetBrowserOverlay.kt  PresetSelector.kt  RackModule.kt  RotaryKnob.kt  SavePresetDialog.kt  SessionLibrary.kt  SpectrumAnalyzer.kt  StompSwitch.kt  TempoControls.kt  TopBar.kt  TunerDisplay.kt  TunerOverlay.kt
app/src/main/java/com/guitaremulator/app/ui/drums/: DrumKitEditor.kt  DrumMachineScreen.kt  DrumMixerStrip.kt  DrumPadGrid.kt  DrumTransportBar.kt  PatternSelector.kt  StepSequencerRow.kt
app/src/main/java/com/guitaremulator/app/ui/screens/: EffectEditorScreen.kt  PedalboardScreen.kt  SettingsScreen.kt
app/src/main/java/com/guitaremulator/app/ui/theme/: DesignSystem.kt  Theme.kt
app/src/main/java/com/guitaremulator/app/viewmodel/: ABComparisonDelegate.kt  AudioSnapshot.kt  AudioViewModel.kt  CabinetIRDelegate.kt  DrumViewModel.kt  LooperDelegate.kt  NeuralModelDelegate.kt  PresetDelegate.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/guitaremulator/app/: LooperTrimTest.kt
app/src/test/java/com/guitaremulator/app/audio/: WavDecoderTest.kt
app/src/test/java/com/guitaremulator/app/data/: EffectParameterFuzzTest.kt  EffectRegistryTest.kt  MidiMappingManagerTest.kt  PresetManagerIntegrationTest.kt  PresetSerializationTest.kt  SetlistManagerTest.kt  SpectrumMappingTest.kt
app/src/test/java/com/guitaremulator/app/viewmodel/: ABSnapshotTest.kt  AudioViewModelTest.kt
docs/: bd2-blues-driver-circuit-analysis.md  compose-skeuomorphic-techniques.md  dl4-delay-modeler-analysis.md  drum-machine-redesign-research.md  dsp-techniques-research.md  frusciante-la-cigale-2006-research.md  frusciante-slane-castle-intro-research.md  fuzzrite-research.md  guitar-rig-7-ui-analysis.md  guyatone-vtx-tremolo-analysis.md  hendrix-changes-gear-research.md  hendrix-machine-gun-gear-research.md  iconic-tone-research.md  implementation-research.md  iron-butterfly-fuzzrite-research.md  looper-competitive-landscape.md  looper-crop-trim-design.md  looper-feature-research.md  looper-recording-architecture.md  mf102-ring-modulator-research.md  mobile-ui-competitive-analysis.md  pedal-circuit-analysis.md  peter-green-tone-research.md  progressive-disclosure-analysis.md  re-201-space-echo-circuit-analysis.md  reamp-preset-restore-design.md  skeuomorphic-design-spec.md  spring-reverb-research.md  surprise-preset-tones-research.md  trim-editor-zoom-spec.md  tube-screamer-circuit-analysis.md  ui-overhaul-design.md
docs/superpowers/plans/: 2026-03-22-drum-machine-synth.md  2026-03-30-ts808-bd2-upgrade.md
docs/superpowers/specs/: 2026-03-22-drum-machine-synth-design.md  2026-03-30-ts808-bd2-upgrade-eq-redesign.md
gradle/: libs.versions.toml
